--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
-body {
+html, body {
+  width:  100%;
+  height: 100%;
   margin: 0;
   background-color: black;
 }
@@ -9,9 +11,4 @@ body {
 #canvas1 {
   background: rgb(226,132,72);
   background: linear-gradient(0deg, rgba(226,132,72,1) 0%, rgba(28,28,215,1) 100%);
-}
-#character_canvas {
-  position: absolute;
-  bottom: 0px;
-  left: 50%;
 }
